# sik-zad-1

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docs/: task.txt
src/: Makefile  kayles_common.h  kayles_server  kayles_server.cpp
src/.claude/: settings.local.json
tests/: CMakeLists.txt  test_client_message.cpp  test_game.cpp  test_game_state.cpp  test_server_parsing.cpp
